# eventfold

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/: eventfold-improvements.md  guide.md  plan.md
docs/prds/: 01-event-type.md  02-event-log.md  03-snapshot-persistence.md  04-views-and-reducers.md  05-integrity-checking.md  06-log-rotation.md  07-builder-and-registry.md  08-crash-safety-and-property-tests.md  09-examples-and-docs.md  12-reader-writer-split.md  13-append-result.md  14-conditional-append.md  15-file-locking.md  16-tail-poll.md  17-blocking-tail.md  README.md
docs/prds/completed/: 01-event-type.md  02-event-log.md  03-snapshot-persistence.md  04-views-and-reducers.md  05-integrity-checking.md  06-log-rotation.md  07-builder-and-registry.md  08-crash-safety-and-property-tests.md  09-examples-and-docs.md  10-leptos-web-example.md  11-event-metadata.md  12-reader-writer-split.md  13-append-result.md  14-conditional-append.md  15-file-locking.md  16-tail-poll.md  17-blocking-tail.md
examples/: blocking_tail.rs  multi_view.rs  notes_cli.rs  poll_tail.rs  rebuild.rs  rotation.rs  time_travel.rs  todo_cli.rs
examples-leptos/todo-app/: Cargo.toml  README.md
examples-leptos/todo-app/src/: app.rs  lib.rs  main.rs  server.rs  state.rs
examples-leptos/todo-app/src/components/: mod.rs  stats.rs  todo_item.rs  todo_list.rs
examples-leptos/todo-app/style/: main.css
src/: archive.rs  event.rs  lib.rs  log.rs  snapshot.rs  view.rs
tests/: blocking_tail_tests.rs  builder_tests.rs  conditional_append_tests.rs  crash_safety.rs  event_tests.rs  integrity_tests.rs  locking_tests.rs  log_tests.rs  metadata_integration_tests.rs  props.rs  reader_writer_tests.rs  rotation_tests.rs  snapshot_tests.rs  tail_tests.rs  view_tests.rs
tests/common/: mod.rs
