[package]
name = "eventfold"
version = "0.1.0"
edition = "2024"
description = "Lightweight, append-only event log with derived views — your application state is a fold over an event log"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AetherXHub/eventfold"
documentation = "https://docs.rs/eventfold"
readme = "README.md"
keywords = ["event-sourcing", "event-log", "append-only", "reducer", "jsonl"]
categories = ["data-structures", "database-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
fs2 = "0.4"
notify = "7"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
proptest = "1"
